Prevent Koenig-lookup of base::string16 arguments

Previously functions in base that took a base::string16 argument could
be used unqualified on platforms where std::wstring is 32-bit. This was
surprising and inconsistent.

Move base::string16_char_traits into namespace base::string16_internals
to prevent argument-dependent lookup from finding functions in
base::. This doesn't break existing code because it was already
necessary to specify the base:: namespace for it to compile on Windows.

Also remove the base::string16_char_traits typedef on platforms where
base::string16 is std::wstring, for consistency.

BUG=752856

Change-Id: I76ff1691763f552c3140329c2701b0bf61e8c911