chrome/browser/ui/app_list/search/arc/arc_playstore_search_provider.cc
@@ -46,7 +46,7 @@ void ArcPlayStoreSearchProvider::Start(bool is_voice_query,
 
   ClearResults();
   app_instance->GetRecentAndSuggestedAppsFromPlayStore(
-      UTF16ToUTF8(query), max_results_,
+      base::UTF16ToUTF8(query), max_results_,
       base::Bind(&ArcPlayStoreSearchProvider::OnResults,
                  weak_ptr_factory_.GetWeakPtr(), base::TimeTicks::Now()));
 }
